
* V1.22.9 - 
- Code: Removed some pointless comparisons (e.g. unsigned < 0)
- System: Accept -- on the commmand line to indicate all further options
  to be passed into the BASIC program even if it's otherwise a Brandy option.
- System: Implement BBC MOS calls OSRDCH, OSNEWL, OSASCI and OSCLI via the
  traditional CALL &FFxx route.
- BASIC: Fix regression on MODE command caused by uint8 data type introduction.
- BASIC: Implemented 64-bit unary indirection using ']' (as per BBCSDL).
- BASIC: Implemented DIM HIMEM (a Basalt extension), in Matrix Brandy this
  allocates memory outside the heap, using malloc() and friends. Memory
  blocks for indirection, and numeric arrays can be created in this.  String
  arrays control blocks will be off the heap, but the strings themselves will
  still be stored on the heap.

* V1.22.8 - 16 September 2020
- BASIC: Fix REM behaviour of DEF line.
- BASIC: Implemented SYS() function, somewhat in line with BBCSDL's version.
  In Matrix Brandy, this calls OS_SWINumberFromString, and also works under
  RISC OS.
- System: Implement two SYS calls for obtaining the address of a system call
  (Brandy_dlgetaddr) and to call it (Brandy_dlcalladdr).
- System: Implement OS_SWINumberToString.
- System: Fix bugs in string handling on OPENIN, OPENOUT and OPENUP
  (CVE-2019-14662 and CVE-2019-14663 reported on upstream Brandy)
- Display: Fix a subtle VDU23,16,1| bug. Thanks to Richard Russell for this.
- Examples: Telstar client updated with ANSItex BBS added.

* V1.22.7 - 01 August 2020
- Platforms: Native display builds for RISC OS available, including
  networking. 26-bit and 32-bit builds both possible.
- Platforms: SYS calls on RISC OS can call the Brandy_* calls from within
  the interpreter in addition to the RISC OS native calls.
  OS_SWINumberFromString is intercepted to also recognise the Brandy_* calls.
- Platforms: BrandyApp build mechanism changed, no longer relies on ld to